# LLM-news-summary

./: README.md  gui.py  main.py  pyproject.toml
components/: crawler.py  summarizer.py
components/gui/: call_news.py
